[tool.poetry]
name = "fedora-best-mirror"
version = "0.1.0"
description = "Find best Fedora mirror"
license = "MIT"
authors = ["Marcin Bachry <hegel666@gmail.com>"]
maintainers = ["Marcin Bachry <hegel666@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/mbachry/fedora-best-mirror"
repository = "https://github.com/mbachry/fedora-best-mirror"
documentation = "https://github.com/mbachry/fedora-best-mirror"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{ include = "fedora_best_mirror" }]

[tool.poetry.dependencies]
python = "^3.12"
niquests = ">=3.11"

[tool.poetry.scripts]
fedora-best-mirror = 'fedora_best_mirror.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target-version = ['py313']
skip-string-normalization = true

[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.ruff.lint]
select = [
  'A',   # flake8-builtins
  'B',   # flake8-bugbear
  'C4',  # flake8-comprehensions
  'DTZ', # flake8-datetimez
  'E',   # pycodestyle - error
  'ERA', # eradicate
  'F',   # Pyflakes
  'I',   # isort
  'ICN', # flake8-import-conventions
  'ISC', # flake8-implicit-str-concat
  'UP',  # pyupgrade
  'W',   # pycodestyle - warning
]
ignore = [
  'E501', # Line too long
]
fixable = ['I', 'UP']
